# gh-productivity

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_TOPICS.txt  LICENSE  README.md  README_WITH_BADGES.md  SEO_TAGS.md  claude.md  config.example.py  dashboard.py  enhanced_dashboard.py  enhanced_dashboard_fixed.py  environment.yml  extract.py  generate_productivity.py  llm_analysis_cache.json  llm_analyzer.py  package.json  pyproject.toml  requirements.txt  setup.py  test_setup.py  web_dashboard.py  web_dashboard_backup.py  web_dashboard_enhanced.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
misc/: period_stats.py
